discussion/kv_engine/174540/174540_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51606: Pass VB State lock to VBucket::sendSeqnoAck()

We already take the VB state lock, farther up the call stack, pass it
down here as at this point we still require that the state cannot
change.

Change-Id: I5da46f5ed1f9de39ae0b21e74c6c3c5d022bea52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-05 19:02:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-05 19:02:34.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/297764/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 19:45:42.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/163/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13: error: use of undeclared identifier "folly" [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) = 0;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/passive_durability_monitor.h:180:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/163/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/163/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/161/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/161/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/166/ : FAILURE

Timeout of a CTest test [2022-05-05T19:24:21.228Z]  10/425 Test #212: ep-engine_ep_unit_tests.NexusBackends/DurabilityEPBucketTest ................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/166/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/162/ : FAILURE

Compile error at [2022-05-05T19:07:41.828Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/162/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/182/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/159]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2327 Test failed: `" (Expected `250675" to be less than or equal to `245760" - Unexpected fileSize for vbucket)
[2022-05-05T19:34:36.788Z] (222 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/182/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/206/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/156/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/165/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/169/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/165/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
